Make button blue and rounded corners fixed alignment on top section

--- a/style.css
+++ b/style.css
@@ -67,16 +67,26 @@ h1{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    margin-left: 200px;
+
     width: 50%;
 }
 
 img{
-    margin: 50px;
+    margin-bottom: 50px;
 }
 
 .p-first{
     font-size: 18px;
     color: #E5E7EB;
-    margin-left: 130px;
+
+}
+
+.sign-up-first-section{
+    background-color: #3882f6;
+    color: white;
+    width: 100px;
+    height: 40px;
+    border: 1px; #3882f6;
+    border-radius: 10px;
 }
